--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -11,12 +11,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#maven
-NEXUS_USERNAME=None
-USERNAME=None
-NEXUS_PASSWORD=None
-PASSWORD=None
-RELEASE_REPOSITORY_URL=https://maven.byted.org/nexus/content/repositories/ugc_android/
-SNAPSHOT_REPOSITORY_URL=https://maven.byted.org/nexus/content/repositories/ugc_android_snapshot/
-PUBLISH_LOCAL_REPO=../repo
-useLocalMaven=false
+#publish
+
+ARTIFACT_ID=aabresguard-plugin
