--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
     compileOnly "com.android.tools.build:aapt2-proto:0.4.0"
     compileOnly gradleApi()
-    api "com.android.tools.build:gradle:${versions.gradle_tools}"
+    api deps.gradle.tools
 
     implementation "com.android.support:support-annotations:24.2.0"
     implementation 'commons-io:commons-io:2.6'
