1. add samples 2. bugfix 3. update doc

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         classpath deps.gradle.tools
         classpath deps.kotlin.plugin
         classpath deps.plugin.digital
+        classpath "com.bytedance.android:aabresguard-plugin:${versions.aabresguard}"
     }
 }
 
