1. remove gradletool dependency. 2. update plugin, update task dependency graph.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,5 @@
+import proguard.gradle.ProGuardTask
+
 buildscript {
     repositories {
         jcenter()
@@ -12,6 +14,7 @@ buildscript {
 
 apply plugin: 'java-library'
 apply from: rootProject.file('gradle/publish.gradle')
+apply from: rootProject.file('gradle/java-artifacts.gradle')
 apply plugin: "com.google.protobuf"
 
 configurations.all {
@@ -27,17 +30,18 @@ dependencies {
 
     compileOnly "com.android.tools.build:aapt2-proto:0.4.0"
     compileOnly gradleApi()
-    api deps.gradle.tools
+//    compile deps.gradle.tools
 
     implementation "com.android.support:support-annotations:24.2.0"
     implementation 'commons-io:commons-io:2.6'
-    implementation 'commons-codec:commons-codec:1.5'
+    compile 'commons-codec:commons-codec:1.5'
 
     annotationProcessor "com.google.auto.value:auto-value:1.5.2"
     implementation "com.google.auto.value:auto-value:1.5.2"
     compile group: 'org.dom4j', name: 'dom4j', version: '2.1.0'
     compile deps.bundletool
 
+    testImplementation deps.gradle.tools
     testImplementation "junit:junit:4.12"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.2.0"
     testImplementation "com.google.guava:guava:27.0.1-jre"
@@ -53,3 +57,48 @@ protobuf {
         artifact = "com.google.protobuf:protoc:3.4.0"
     }
 }
+
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.bytedance.android.aabresguard.AabResGuardMain'
+        attributes 'Manifest-Version': versions[ARTIFACT_ID]
+        attributes "Jar-Version": versions[ARTIFACT_ID]
+        attributes "Build-Time": releaseTime()
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+}
+
+// copy the jar to work directory
+task buildJar(type: Copy, dependsOn: [build, jar]) {
+    version = versions[ARTIFACT_ID]
+    from('build/libs') {
+        include '*' + version + '*.jar'
+    }
+    into("../repo/AabResGuard-jar/${version}/")
+}
+
+
+task proguardJar(type: ProGuardTask, dependsOn: [build, jar]) {
+    version = versions[ARTIFACT_ID]
+    injars "build/libs/core-${version}.jar"
+    outjars 'build/libs/proguard.jar'
+    configuration 'proguard-rules.pro'
+    verbose()
+    copy {
+        from('build/libs') {
+            include '*' + version + '*.jar'
+        }
+        into("../repo/AabResGuard-jar/${version}/")
+    }
+}
+
+def static releaseTime() {
+    return new Date().format("yyyy-MM-dd HH:mm ZZZ", TimeZone.getDefault())
+}
+
+defaultTasks 'buildJar'
