--- a/gradle/java-artifacts.gradle
+++ b/gradle/java-artifacts.gradle
@@ -3,17 +3,17 @@ apply plugin: 'maven-publish'
 sourceCompatibility = versions.java_version
 targetCompatibility = versions.java_version
 
-task sourcesJar(type: Jar) {
-    from sourceSets.main.java.srcDirs
-    classifier = 'sources'
-    version = versions[ARTIFACT_ID]
-}
+//task sourcesJar(type: Jar) {
+//    from sourceSets.main.java.srcDirs
+//    classifier = 'sources'
+//    version = versions[ARTIFACT_ID]
+//}
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-    version = versions[ARTIFACT_ID]
-}
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//    version = versions[ARTIFACT_ID]
+//}
 
 artifacts {
     archives javadocJar
