--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ RELEASE_REPOSITORY_URL=https://maven.byted.org/nexus/content/repositories/ugc_an
 SNAPSHOT_REPOSITORY_URL=https://maven.byted.org/nexus/content/repositories/ugc_android_snapshot/
 PUBLISH_LOCAL_REPO=../repo
 useLocalMaven=false
+#enableAabResGuardPlugin=false
