--- a/gradle/aabresguard.gradle
+++ b/gradle/aabresguard.gradle
@@ -15,6 +15,7 @@ aabResGuard {
     filterList = [
             "*/arm64-v8a/*"
     ]
-    enableFilterStrings = false
-    unusedStringPath = "build/output/xxx.txt"
+    enableFilterStrings = true
+    unusedStringPath = "../unused.txt"
+    languageFilter = ["ba", "ca"]
 }
