exclude plugin module bundletool dependency.

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -13,5 +13,9 @@ dependencies {
     api project(":core")
 }
 
+configurations {
+    all*.exclude group: "com.android.tools.build", module: "bundletool"
+}
+
 sourceCompatibility = versions.java
 targetCompatibility = versions.java
