修复语言过滤bug，添加demo测试，优化日志输出

--- a/gradle/aabresguard.gradle
+++ b/gradle/aabresguard.gradle
@@ -16,6 +16,6 @@ aabResGuard {
             "*/arm64-v8a/*"
     ]
     enableFilterStrings = true
-    unusedStringPath = "../unused.txt"
-    languageFilter = ["ba", "ca"]
+    unusedStringPath = "core/src/test/resources/com/bytedance/android/aabresguard/demo/unused.txt"
+    languageWhiteList = ["en", "zh"]
 }
