--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,16 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #maven
+# maven
+NEXUS_USERNAME=
+USERNAME=
+NEXUS_PASSWORD=
+PASSWORD=
+RELEASE_REPOSITORY_URL=
+SNAPSHOT_REPOSITORY_URL=
+PUBLISH_LOCAL_REPO=../repo
+# 是否使用本地 maven 依赖
+useLocalMaven=false
+# 是否源码依赖
+useSource=false
+enableAabResGuardPlugin=true
