--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,7 @@ useLocalMaven=false
 # 是否源码依赖
 useSource=false
 enableAabResGuardPlugin=true
+# bintray
+uploadToBintray=true
+bintrayInfo.user=****
+bintrayInfo.apiKey=***************
