--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -1,3 +1,6 @@
+loadSystemProperties(rootProject.file("gradle.properties"))
+loadSystemProperties(rootProject.file("local.properties"))
+
 apply from: 'gradle/ext.gradle'
 apply from: 'gradle/versions.gradle'
 
@@ -6,4 +9,13 @@ allprojects {
         options.addStringOption('Xdoclint:none', '-quiet')
         options.addStringOption('encoding', 'UTF-8')
     }
+}
+
+static void loadSystemProperties(File path) {
+    if (!path.exists()) {
+        return
+    }
+    Properties properties = new Properties()
+    properties.load(path.newDataInputStream())
+    System.properties.putAll(properties)
 }
