--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.mikepenz:ionicons-typeface:2.0.1.5-kotlin@aar'
     implementation 'com.mikepenz:pixeden-7-stroke-typeface:1.2.0.3-kotlin@aar'
     implementation 'com.mikepenz:material-design-icons-dx-typeface:5.0.1.0-kotlin@aar'
+    compileOnly deps.plugin['bintray-plugin']
 }
