--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
         classpath deps.kotlin.plugin
 
         if ("true".equalsIgnoreCase(System.getProperty("enableAabResGuardPlugin", "false"))) {
-            classpath "com.bytedance.android:aabresguard-plugin:${versions.aabresguard}"
+            classpath deps.aabresguard.plugin
         }
     }
 }
