--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,9 +1,10 @@
 def versions = [:]
 versions.gradletools = "3.2.1"
 versions.kotlin = "1.3.0"
+//versions.gradletools = "4.0.0-alpha07"
+//versions.kotlin = "1.3.61"
 versions.java = "8"
-//versions.aabresguard = "0.1.0-beta-7"
-versions.aabresguard = "0.1.1"
+versions.aabresguard = "0.1.2"
 // android
 versions.compileSdkVersion = 28
 versions.minSdkVersion = 15
@@ -43,5 +44,10 @@ deps.plugin = plugin
 // library
 deps.appcompatV7 = "com.android.support:appcompat-v7:${versions.support}"
 deps.bundletool = "com.android.tools.build:bundletool:${versions.bundletool}"
+// aabresguard
+def aabresguard = [:]
+aabresguard.core = "$GROUP_ID:aabresguard-core:${versions["aabresguard"]}"
+aabresguard.plugin = "$GROUP_ID:aabresguard-plugin:${versions["aabresguard"]}"
+deps.aabresguard = aabresguard
 
 ext.deps = deps
