--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     compileOnly "com.android.tools.build:aapt2-proto:0.4.0"
     compileOnly gradleApi()
-//    compile deps.gradle.tools
+//    compile deps.gradle.agp
 
     implementation "com.android.support:support-annotations:24.2.0"
     shadow 'commons-io:commons-io:2.6'
@@ -42,7 +42,7 @@ dependencies {
     shadow group: 'org.dom4j', name: 'dom4j', version: '2.1.0'
     shadow deps.bundletool
 
-    testImplementation deps.gradle.tools
+    testImplementation deps.gradle.agp
     testImplementation "com.android.tools.build:aapt2-proto:0.4.0"
     testImplementation group: 'org.dom4j', name: 'dom4j', version: '2.1.0'
     testImplementation "junit:junit:4.12"
