--- a/gradle/aabresguard.gradle
+++ b/gradle/aabresguard.gradle
@@ -4,7 +4,7 @@ if (!"true".equalsIgnoreCase(System.getProperty("enableAabResGuardPlugin", "fals
 
 apply plugin: "com.bytedance.android.aabResGuard"
 aabResGuard {
-    mappingFile = file("../mapping.txt").toPath()
+//    mappingFile = file("../mapping.txt").toPath()
     whiteList = [
             "*.R.raw.*",
             "*.R.drawable.icon"
