--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,10 +1,10 @@
 def versions = [:]
-versions.gradletools = "3.2.1"
-versions.kotlin = "1.3.0"
-//versions.gradletools = "4.0.0-alpha07"
-//versions.kotlin = "1.3.61"
+//versions.agp = "3.2.0"
+//versions.kotlin = "1.3.0"
+versions.agp = "4.0.0-alpha08"
+versions.kotlin = "1.3.61"
 versions.java = "8"
-versions.aabresguard = "0.1.2"
+versions.aabresguard = "0.0.1-alpha1"
 // android
 versions.compileSdkVersion = 28
 versions.minSdkVersion = 15
@@ -26,7 +26,7 @@ ext.versions = versions
 ext.deps = [:]
 // gradle
 def gradle = [:]
-gradle.tools = "com.android.tools.build:gradle:${versions.gradletools}"
+gradle.agp = "com.android.tools.build:gradle:${versions.agp}"
 deps.gradle = gradle
 // kotlin
 def kotlin = [:]
