--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,10 +1,10 @@
 def versions = [:]
-//versions.agp = "3.2.0"
-//versions.kotlin = "1.3.0"
-versions.agp = "4.0.0-alpha08"
-versions.kotlin = "1.3.61"
+versions.agp = "3.2.0"
+versions.kotlin = "1.3.0"
+//versions.agp = "4.0.0-alpha08"
+//versions.kotlin = "1.3.61"
 versions.java = "8"
-versions.aabresguard = "0.0.1-alpha1"
+versions.aabresguard = "0.1.3"
 // android
 versions.compileSdkVersion = 28
 versions.minSdkVersion = 15
