--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -7,3 +7,4 @@ zipStorePath=wrapper/dists
 #distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
 #distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-milestone-2-all.zip
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-rc-1-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
