--- a/gradle.properties
+++ b/gradle.properties
@@ -21,11 +21,11 @@ RELEASE_REPOSITORY_URL=
 SNAPSHOT_REPOSITORY_URL=
 PUBLISH_LOCAL_REPO=../repo
 # 是否使用本地 maven 依赖
-useLocalMaven=false
+useLocalMaven=true
 # 是否源码依赖
-useSource=false
+useSource=true
 enableAabResGuardPlugin=true
 # bintray
-uploadToBintray=true
+uploadToBintray=false
 bintrayInfo.user=****
 bintrayInfo.apiKey=***************
