--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,15 +1,15 @@
 def versions = [:]
-versions.agp = "4.1.0"
+versions.agp = "4.2.0"
 versions.kotlin = "1.3.61"
 versions.java = "8"
-versions.aabresguard = "0.1.9"
+versions.aabresguard = "0.1.10"
 // android
-versions.compileSdkVersion = 28
+versions.compileSdkVersion = 30//28
 versions.minSdkVersion = 15
-versions.targetSdkVersion = 28
+versions.targetSdkVersion = 30//28
 versions.support = "28.0.0"
 
-versions.bundletool = "0.10.0"
+versions.bundletool = "0.12.0"
 
 versions["aabresguard-core"] = versions.aabresguard
 versions["aabresguard-plugin"] = versions.aabresguard
@@ -22,6 +22,7 @@ versions.digital = "3.4.0"
 ext.versions = versions
 
 ext.deps = [:]
+
 // gradle
 def gradle = [:]
 gradle.agp = "com.android.tools.build:gradle:${versions.agp}"
